--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     ]
   },
   "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.2",
-    "react": "^17.0.2",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.1",
+    "react": "^18.2.0",
     "react-clipboard.js": "^2.0.16",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
@@ -49,21 +49,21 @@
     "workbox-streams": "^5.1.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^28.1.7",
+    "@types/node": "^18.7.8",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "customize-cra": "^1.0.0",
-    "less": "^4.1.2",
+    "less": "^4.1.3",
     "less-loader": "^7.3.0",
     "postcss-pxtorem": "^5.1.1",
-    "react-app-rewire-alias": "^1.1.5",
-    "react-app-rewired": "^2.1.8",
-    "react-scripts": "4.0.3",
+    "react-app-rewire-alias": "^1.1.7",
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "^4.0.3",
     "svg-sprite-loader": "^6.0.11",
-    "typescript": "^4.0.3"
+    "typescript": "^4.7.4"
   }
 }
