--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.1",
+    "gatsby": "^4.21.1",
+    "gatsby-image": "^3.11.0",
     "react": "^18.2.0",
     "react-clipboard.js": "^2.0.16",
     "react-dom": "^18.2.0",
